fixed overflow issue with text

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -194,7 +194,7 @@ main {
   display: flex;
   align-items: center;
   background-color: var(--background);
-  z-index: 1;
+  z-index: 2;
   color: var(--deep-blue);
   transition: color 0.3s ease;
 }
@@ -225,6 +225,7 @@ main {
 
 .links > a > span {
   position: relative;
+  text-overflow: ellipsis;
   font-size: clamp(1rem, 2vw, 2rem);
   transition: color 0.3s ease, transform 150ms ease-in-out;
   transform: translateX(-100%);
